build_log_clang.txt
==========================================
 CONFIGURANDO Y CONSTRUYENDO: clang-release
==========================================
-- Configuring done (1.6s)
-- Generating done (0.7s)
-- Build files have been written to: D:/gdrive/numericrepresentations_gamma/build/build_targets/clang/release
[ 96%] Built target Catch2
[ 98%] Built target Catch2WithMain
[100%] Built target test_01_math_tables
[ 96%] Built target Catch2
[ 98%] Built target Catch2WithMain
[100%] Built target test_02_append
[ 94%] Built target Catch2
[ 97%] Built target Catch2WithMain
[ 98%] Building CXX object CMakeFiles/test_03_core_internal.dir/tests/test_03_core_internal.cpp.obj
In file included from D:\gdrive\numericrepresentations_gamma\tests\test_03_core_internal.cpp:3:
D:/gdrive/numericrepresentations_gamma/include/core/internal/basic_types.hpp:531:21: error: deduction guide must be declared in the same scope as template 'NumRepr::fixed_string'
  531 | template <size_t N> fixed_string(const char (&)[N]) -> fixed_string<N>;
      |                     ^
D:/gdrive/numericrepresentations_gamma/include/core/internal/basic_types.hpp:199:8: note: template is declared here
  199 | struct fixed_string {
      |        ^
1 error generated.
mingw32-make[3]: *** [CMakeFiles\test_03_core_internal.dir\build.make:79: CMakeFiles/test_03_core_internal.dir/tests/test_03_core_internal.cpp.obj] Error 1
mingw32-make[2]: *** [CMakeFiles\Makefile2:311: CMakeFiles/test_03_core_internal.dir/all] Error 2
mingw32-make[1]: *** [CMakeFiles\Makefile2:318: CMakeFiles/test_03_core_internal.dir/rule] Error 2
mingw32-make: *** [Makefile:185: test_03_core_internal] Error 2
